Fix navbar breakpoint layout breakage

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 $primary: #1491eb;
-$navbar-breakpoint: 768px;
+$navbar-breakpoint: 769px;
 $pre-font-size: 1em;
 $pre-code-font-size: 1em;
 
